@@ -4,6 +4,8 @@
 
 	* Work config file loading/unloading into libcerebro updown library.
 	
+	* Work config file funcs in cerebrod.
+	
 2005-05-01  Albert Chu  <chu11@llnl.gov>
 
 	* Rework cerebro lib and cerebrod daemon to use default module so
